# Learn_python3

./: .gitignore.TXT  .replit  CONTRIBUTING.md  HaudiSovet.txt  README  education_python3-git.txt  education_python3.txt  pyproject.toml
Algorithms/: Binary_search.py  Binary_search_iteration.py  count_symbols_in_string.py  linear_search.py  monte_carlo.py  pack_lists.py  password_gen_validate.py  prime_numbers.py  quicksort_recursive.py  sort_list_two_statement.py
Algorithms/Recoursive/: quicksort_recursive.py  recoursive_number_is_prime.py
BashScripts/: python3.10_debian10_installer.sh
DevOps/: CI_CD.txt  techs_list.txt
Object Oriented Proggraming/: Authentication.py  Circle.py  Counter.py  Credit_calc.py  Path.py  Singleton.py  User.py  create_ogjects.py  solid_principles.txt  what_is_it.txt
Object Oriented Proggraming/tests/: utests_circle.py
RegularExpressions/: r_strings.py  re_match.py
Reset_Telebot/: API_KEY.txt  bot.py  config.py  melody.py
Test/: practice_advice.txt  test_exception.py
WEB/: test.html
WEB/css/: styles.css
WEB/folder/: index.html
for_linux/: add_time_in_file.py  now.txt  time.py
google-sheets/: run.py
python/Decorators/: decor_1.py
python_book_Poul_Barry/: Decorator_func.py  HaudiSovet.txt  days_week.py  numpy1.py  spisok_prosto.py  system_1.py
sample_project/: calculate_cost_delivery.py  check_more_hundred.py  edit_string.py  get_perimeter.py  list_array_phones.py  phone_numbers_format.py  positive_negative_check_numbers.py  reverse_array.py  sample_numbers_algorithm_ Eratosthenes_sieve.py  test.py  zodiac_signs.py
(+45 files in other folders)
