[tool.poetry]
name = "repl_python3_repositres"
version = "0.1.0"
description = ""
authors = ["zerg547 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
telebot = "^0.0.4"
apiclient = "^1.0.4"
config = "^0.5.0"
httplib2 = "^0.19.1"
oauth2client = "^4.1.3"
pandas = "^1.2.5"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
